# my-seo-pipeline

./: .gitignore  pyproject.toml  semrush_api_keyword_reports_gptpro.md
my_seo_pipeline/data/: initial_keywords copy.csv  initial_keywords.csv
my_seo_pipeline/scripts/: analyze_keywords.py  test_openai.py  test_semrush.py
